--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-quill-new": "^3.4.6",
